[tool.poetry]
name = "loggiweb-poc"
version = "0.1.0"
description = "Loggi's loggi-web for PoC of Renovatebot"
authors = ["Loggi Developers<dev@loggi.com>"]

[tool.poetry.dependencies]
python = "~3.7"

# Under the old requirements/base.txt
adyen = "1.1.0"
amqp = "2.5.2"
architect = "0.5.4.post1"
asn1crypto = "0.22.0"
azureml-sdk = "1.10.0"
backports-abc = "0.5"
banking = "1.2.3"
beautifulsoup4 = "4.5.1"
billiard = "3.6.3.0"
blessings = "1.6"
boto = "2.49.0"
boto3 = "1.16.32"
braintree = "4.1.0"
cachetools = "2.0.0"
celery = "4.4.2"
certifi = "2019.6.16"
chardet = "3.0.4"
choicesenum = "0.6.0"
ConcurrentLogHandler = "0.9.1"
contextlib2 = "0.5.5"
cryptography = "2.7"
cssselect = "1.1.0"
Cython = "0.29.13"
dicttoxml = "1.7.4"
Django = "2.2.12"
django-bulk-update = "1.1.7.post1"
django-celery-beat = "1.5.0"
django-celery-results = "1.0.1"
django-cid = "1.3"
django-cognito-jwt = "0.0.3"
django-countries = "5.3.3"
django-extensions = "3.0.9"
django-extra-fields = "2.0.3"
django-filter = "2.2.0"
django-fixture-magic = "0.0.7"
django-grpc = "1.0.8"
django-localflavor = "2.2"
django-prettyjson = "0.4.1"
django-queryinspect = "1.0.0"
django-redis = "4.10.0"
django-redis-cache = "1.6.4"
django-storages = "1.7.1"
django-tastypie = "0.14.3"
django-mptt = "0.9.1"
django-pb-model = "0.2.0"
djangorestframework = "3.10.3"
djangorestframework-simplejwt = "4.4.0"
drf-access-policy = "0.5.1"
drf-nested-routers = "0.91"
durabledict = "0.9.3"
elasticsearch = "7.8.1"
elasticsearch-dsl = "7.3.0"
entrypoints = "0.2.2"
execnet = "1.4.1"
fancycompleter = "0.7"
firebase-admin = "4.4.0"
fixedwidth = "1.0.10"
flower = "0.9.5"
future = "0.17.1"
geopy = "0.96.2"
googleapis-common-protos = "1.6.0"
graphene = "2.1.8"
graphene-django = "2.4.0"
graphitesend = "0.3.4"
graphql-core = "2.3.1"
graphql-relay = "2.0.0"
grpcio = "1.26.0"
grpcio-tools = "1.26.0"
grpcio-health-checking = "1.26.0"
grpcio-status = "1.26.0"
gutter-python3 = "0.6.0"
h3 = "3.7.3"
hiredis = "1.0.1"
httplib2 = "0.19.1"
idna = "2.5"
ie = "2.0.0"
inflection = "0.3.1"
influxdb = "5.2.3"
ipaddress = "1.0.18"
ipdb = "0.12.2"
ipykernel = "5.1.2"
ipython = "7.19.0"
ipython-genutils = "0.2.0"
ipywidgets = "6.0.0"
iso8601 = "0.1.11"
itau400 = "1.3.0"
jdcal = "1.3"
jedi = "0.17.2"
jira = "2.0.0"
jsonpickle = "0.9.4"
jsonschema = "2.6.0"
jupyter = "1.0.0"
jupyter-console = "6.1.0"
kombu = "4.6.8"
linecache2 = "1.0.0"
lxml = "4.4.1"
MarkupSafe = "1.1.1"
meld3 = "2.0.0"
mistune = "0.7.4"
mrwhite = "1.2.2"
nbconvert = "5.2.1"
nbformat = "4.3.0"
notebook = "5.0.0"
numpy = "1.18.4"
oauthlib = "2.0.3"
openpyxl = "2.3.5"
ordereddict = "1.1"
pandas = "0.25.1"
pandocfilters = "1.4.1"
pathlib2 = "2.2.1"
pathtools = "0.1.2"
pdbpp = "0.8.3"
pexpect = "4.7.0"
django-phonenumber-field = "2.2.0"
phonenumbers = "8.10.7"
pickleshare = "0.7.4"
Pillow = "3.3.1"
plivo = "0.11.0"
protobuf = "3.9.1"
protobuf-to-dict = "0.1.0"
psycopg2 = "2.8.6"
ptyprocess = "0.5.1"
pycparser = "2.17"
pycrypto = "2.6.1"
pygeohash = "1.2.0"
Pygments = "2.2.0"
pyjwt = "1.7.1"
pykwalify = "1.6.0"
PyPDF2 = "1.24"
pyrepl = "0.8.4"
pytesseract = "0.1.6"
python-json-logger = "0.1.9"
python-mimeparse = "1.6.0"
python-oauth2 = "1.0.1"
python-statemachine = "0.7.1"
pytz = "2019.3"
PyYAML = "3.13"
pyzmq = "18.1.0"
qtconsole = "4.3.0"
sentry-sdk = "0.14.4"
redis = "2.10.6"
redis_schematics = "0.3.1"
reportlab = "3.4.0"
requests = "2.25.1"
requests-oauthlib = "0.8.0"
restless = "2.1.1"
s2-py = "0.0.6"
sagemaker = "2.19.0"
scandir = "1.5"
schematics = "1.1.3"
scikit-learn = "0.20.1"
shortuuid = "0.4.2"
sift = "3.1.0.0"
simplegeneric = "0.8.1"
singledispatch = "3.4.0.3"
six = "1.12.0"
slackclient = "2.5.0"
statsd = "2.1.2"
supervisor = "4.0.4"
tabulate = "0.7.5"
termcolor = "1.1.0"
terminado = "0.6"
traceback2 = "1.4.0"
traitlets = "4.3.2"
twilio = "6.55.0"
ua-parser = "0.8.0"
unicodecsv = "0.14.1"
unidecode = "1.1.1"
UnleashClient = "3.6.0"
urllib3 = "1.25.10"
vcrpy = "1.10.5"
workalendar = "4.0.0"
wcwidth = "0.1.7"
Werkzeug = "0.12.2"
widgetsnbextension = "2.0.0"
wmctrl = "0.3"
wordpress-json = "0.3.1.post1"
wrapt = "1.10.10"
xlrd = "1.1.0"
XlsxWriter = "0.9.4"
xmltodict = "0.9.2"
zenpy = "1.2.2"
zdesk = "2.7.1"
xhtml2pdf = "0.2.4"
zeep = "3.4.0"

# Py-shared. https://python-poetry.org/docs/dependency-specification/#path-dependencies
#protolog = { path = './loggi/py-shared/libs/protolog', develop = true }
#allocation_offers = { path = './loggi/py-shared/libs/allocation_offers', develop = true}

# From our private repo
nfe_sp = "0.2.20"
snowden = "0.6.17"

# Under the old requirements/production.txt
newrelic = "5.12.1.141"
uWSGI = "2.0.22"

# Add here known to be transitive dependencies that we can one day cleanup.
html5lib = "1.0.1"
Jinja2 = "2.8.1"
packaging = "20.0"
pyOpenSSL = "17.5.0"
python-dateutil = "2.7.3"
promise = "2.3"
black = "^21.5b1"
google-api-core = "^1.20.0"

[tool.poetry.dev-dependencies]
django_mock_queries = "2.1.5"
factory-boy = "2.9.2"
freezegun = "0.3.11"
HTTPretty = "1.0.3"
py = "1.8.2"
pytest = "6.1.1"
pytest-benchmark = "3.2.2"
pytest-cov = "2.10.1"
pytest-django = "4.4.0"
pytest-freezegun = "0.4.2"
pytest-html = "2.1.1"
pytest-mock = "3.6.1"
pytest-profiling = "1.7.0"
pytest-randomly = "3.4.1"
pytest-rerunfailures = "9.1.1"
pytest-sugar = "0.9.4"
pytest-watch = "4.2.0"
pytest-xdist = "2.1.0"
selenium = "3.11.0"
watchdog = "0.8.3"

# Linters
flake8 = "3.8.3"
flake8-bugbear = "20.1.4"
flake8-pytest-style = "1.2.2"
pep8-naming = "0.11.1"
pywatchman = "^1.4.1"
coverage = "5.5"
pytest-env = "^0.6.2"


[[tool.poetry.source]]
name = "loggi"
url = "https://pypi.loggi.com/vqouYW66G1Q5LmpcgXGa/"
secondary = true


[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


